testsuite/tests/tlks/should_fail/all.T
test('tlks007_fail', expect_broken(0000), compile_fail, [''])
test('tlks_fail001', normal, compile_fail, [''])
test('tlks_fail002', normal, compile_fail, [''])
test('tlks_fail003', normal, compile_fail, [''])
test('tlks_fail004', normal, compile_fail, [''])
test('tlks_fail005', normal, compile_fail, [''])
test('tlks_fail006', normal, compile_fail, [''])
test('tlks_fail007', normal, compile_fail, [''])
